--- a/beef.html
+++ b/beef.html
@@ -50,7 +50,7 @@
             <option value="" disabled selected>Select a beef dish</option>
             <option value="./sloppy_joes.html">sloppy joes</option>
             <option value="./beef_stroganoff.html">beef stroganoff</option>
-            <option value="./beef.html">back to beef dishes</option>
+            <option value="./sweets.html">back to beef dishes</option>
           </select>
         </form>
       </div>
