homepage phone responsive

--- a/baguettes.html
+++ b/baguettes.html
@@ -81,7 +81,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
