--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </nav>
-    <button>create a meal planner</button>
+    <button class="btn">create a meal planner</button>
 
     <main class="container">
       <figure>
@@ -148,7 +148,7 @@
       </figure>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
