new photo on main page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
           <a href="./index.html">
             <img
               class="rose-image"
-              src="./ASSETS/Images/rose_image.png"
+              src="./ASSETS/Images/black_rose.png"
               alt="image of a rose"
-              width="50"
+              width="70"
+              height="100"
           /></a>
           <a href="./index.html"><h1>recipes</h1></a>
         </div>
