--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="./index.html">
             <img
               class="rose-image"
-              src="./ASSETS/Images/black_rose.png"
+              src="./ASSETS/Images/bunch_of_roses.png"
               alt="image of a rose"
               width="70"
               height="100"
@@ -28,7 +28,7 @@
           <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
-          <p>"an archive of all your favourite dishes"</p>
+          <p>~ an archive of all your favourite dishes ~</p>
         </div>
       </div>
     </header>
@@ -43,7 +43,6 @@
         </div>
       </div>
     </nav>
-    <button class="btn">create a meal planner</button>
 
     <main class="container">
       <figure>
@@ -147,6 +146,7 @@
         </div>
         <div class="clearfix"></div>
       </figure>
+      <button class="btn">create a meal planner</button>
     </main>
 
     <footer><p class="copyright">&copy; Home Recipes</p></footer>
