--- a/breads.html
+++ b/breads.html
@@ -20,14 +20,15 @@
           <a href="./index.html">
             <img
               class="rose-image"
-              src="./ASSETS/Images/rose_image.png"
+              src="./ASSETS/Images/bunch_of_roses.png"
               alt="image of a rose"
-              width="50"
+              width="70"
+              height="100"
           /></a>
           <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
-          <p>"an archive of all your favourite dishes"</p>
+          <p>~ an archive of all your favourite dishes ~</p>
         </div>
       </div>
     </header>
