--- a/lamb.html
+++ b/lamb.html
@@ -49,9 +49,11 @@
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a lamb dish</option>
-            <option value="./cookies.html">cookies</option>
-            <option value="./brownies.html">brownies</option>
-            <option value="./sweets.html">back to sweets</option>
+            <option value="./moroccan_meatballs.html">
+              moroccan meatballs
+            </option>
+            <option value="./lamb_shoulder.html">lamb shoulder</option>
+            <option value="./lamb.html">back to lamb dishes</option>
           </select>
         </form>
       </div>
