--- a/moroccan_meatballs.html
+++ b/moroccan_meatballs.html
@@ -45,34 +45,38 @@
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
-            <option value="" disabled selected>Select a beef dish</option>
-            <option value="./sloppy_joes.html">sloppy joes</option>
-            <option value="./beef_stroganoff.html">beef stroganoff</option>
-            <option value="./beef.html">back to beef dishes</option>
+            <option value="" disabled selected>Select a lamb dish</option>
+            <option value="./moroccan_meatballs.html">
+              moroccan meatballs
+            </option>
+            <option value="./lamb_shoulder.html">lamb shoulder</option>
+            <option value="./lamb.html">back to lamb dishes</option>
           </select>
         </form>
       </div>
       <section class="recipe">
-        <div class="recipe-heading"><h1>sloppy joes</h1></div>
+        <div class="recipe-heading"><h1>moroccan meatballs</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>beef mince</li>
-            <li>onion</li>
-            <li>2 teaspoon garlic</li>
-            <li>1 teaspoon tomato paste</li>
-            <li>2/3 cup tomato sauce</li>
-            <li>1/3 cup water</li>
-            <li>1 tablespoon yellow mustard</li>
-            <li>1 teaspoon worcestershire sauce</li>
-            <li>red pepper flakes</li>
+            <li>500g lamb mince</li>
+            <li>onion finely cut</li>
+            <li>1 egg</li>
+            <li>2 teaspoons garlic</li>
+            <li>1/4 cup mint + parsley finely chopped</li>
+            <li>1 teaspoon cumin</li>
+            <li>1 teaspoon corriander</li>
+            <li>1 teaspoon paprika</li>
+            <li>1/2 teaspoon cinnamon</li>
+            <li>1/2 teaspoon cayenne</li>
             <li>salt and pepper</li>
-            <li>1 teaspoon brown sugar</li>
+            <li>1 tablespoon olive oil</li>
+            <li>breadcrumbs</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/sloppy_joes_2.jpg"
-            alt="image of cookies"
+            src="./ASSETS/Images/moroccan_meatballs.jpg"
+            alt="image of moroccan meatballs"
             height="250"
             width="350"
           />
@@ -80,7 +84,8 @@
         <div class="recipe-instructions">
           <h3>directions:</h3>
           <ol>
-            <li>mix together in a pan. serve on toasted bun with cheese</li>
+            <li>combine all meatball ingredients into one bowl.</li>
+            <li>roll meatball ingredients into 2cm size balls and fry.</li>
           </ol>
         </div>
       </section>
