--- a/baguettes.html
+++ b/baguettes.html
@@ -66,7 +66,7 @@
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/baguette.jpeg"
-            alt="image of cookies"
+            alt="image of a baguette"
             height="250"
             width="350"
           />
