--- a/beef.html
+++ b/beef.html
@@ -74,13 +74,13 @@
               src="./ASSETS/Images/sticky_beef.webp"
               height="200"
               width="300"
-              alt="image of sticky_beef rice"
+              alt="image of sticky beef rice"
             />
             <img
               src="./ASSETS/Images/beef_burger.jpg"
               height="200"
               width="300"
-              alt="image of beef_burger"
+              alt="image of beef burger"
             />
             <img
               src="./ASSETS/Images/beef_meatballs.jpg"
@@ -92,7 +92,7 @@
               src="./ASSETS/Images/beef_ragu.jpg"
               height="200"
               width="300"
-              alt="image of beef_ragu dish"
+              alt="image of beef ragu dish"
             />
           </div>
           <div class="image-slider">
@@ -137,7 +137,7 @@
       </figure>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
