--- a/chicken.html
+++ b/chicken.html
@@ -62,7 +62,6 @@
           <div class="image-slider">
             <img
               src="./ASSETS/Images/chicken_soup.jpg"
-              alt="image of chocolate chip cookies"
               height="200"
               width="300"
               alt="image of a bowl of chicken soup"
@@ -95,13 +94,12 @@
               src="./ASSETS/Images/roast chicken.webp"
               height="200"
               width="300"
-              alt="iamge of roast chicken"
+              alt="image of roast chicken"
             />
           </div>
           <div class="image-slider">
             <img
               src="./ASSETS/Images/chicken_soup.jpg"
-              alt="image of chocolate chip cookies"
               height="200"
               width="300"
               alt="image of a bowl of chicken soup"
@@ -141,7 +139,7 @@
       </figure>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
