--- a/cookies.html
+++ b/cookies.html
@@ -71,7 +71,7 @@
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/choc_chip_cookies.webp"
+            src="./ASSETS/Images/homemade_cookies_1.jpg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -79,12 +79,7 @@
         </div>
         <div class="recipe-instructions">
           <h3>directions:</h3>
-          <!-- <p>
-            with a stand mixer, mix butter and sugar for at least 5 minutes. add
-            eggs one at a time. then add all of the other ingredients. add the
-            chocolate last. spoon the mixture into large mounds. then freeze for
-            at least 30 minutes. bake at 180*c-200*c for 10-14 minutes
-          </p> -->
+
           <ol>
             <li>
               with a stand mixer, mix butter and sugar for at least 5 minutes.
@@ -103,7 +98,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
