--- a/garlic_lime_chicken.html
+++ b/garlic_lime_chicken.html
@@ -75,7 +75,7 @@
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/garlic_lime_chicken.jpg"
-            alt="image of cookies"
+            alt="image of a garlic lime chicken dish"
             height="250"
             width="350"
           />
@@ -84,13 +84,13 @@
           <h3>directions:</h3>
           <ol>
             <li>
-              Mix together salt, black pepper, cayenne, 1/4 teaspoon garlic
+              mix together salt, black pepper, cayenne, 1/4 teaspoon garlic
               powder, thyme, parsley, paprika, and onion powder in a small bowl.
               Sprinkle spice mixture generously on both sides of chicken
               breasts.
             </li>
             <li>
-              Heat butter and olive oil in a large heavy skillet over medium
+              heat butter and olive oil in a large heavy skillet over medium
               heat. Sauté chicken until golden brown, about 6 minutes on each
               side. Sprinkle with remaining 2 teaspoons garlic powder and lime
               juice. Cook 5 minutes more, stirring frequently to coat evenly
@@ -101,7 +101,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
