--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img
             class="moroccan-meatballs-img"
             src="./ASSETS/Images/moroccan_meatballs.jpg"
-            alt="image of moroccan_meatballs"
+            alt="image of moroccan meatballs"
             height="300"
             width="350"
           />
