--- a/lamb_shoulder.html
+++ b/lamb_shoulder.html
@@ -58,25 +58,23 @@
         <div class="recipe-heading"><h1>lamb shoulder</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>500g lamb mince</li>
-            <li>onion finely cut</li>
-            <li>1 egg</li>
-            <li>2 teaspoons garlic</li>
-            <li>1/4 cup mint + parsley finely chopped</li>
-            <li>1 teaspoon cumin</li>
-            <li>1 teaspoon corriander</li>
-            <li>1 teaspoon paprika</li>
-            <li>1/2 teaspoon cinnamon</li>
-            <li>1/2 teaspoon cayenne</li>
+            <li>boned-out front shoulder of lamb or mutton</li>
+          </ul>
+          <ul class="recipe-gap">
+            <li>marinade:</li>
+            <li>handful of fresh rosemary and thyme, finely chopped</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>2 tablespoon wholegrain mustard</li>
+            <li>200ml (7 fl oz) olive oil</li>
+            <li>2 tablespoon apple cider vinegar or lemon juice</li>
             <li>salt and pepper</li>
-            <li>1 tablespoon olive oil</li>
-            <li>breadcrumbs</li>
+            <li>clean, heavy river rock or heavy cast iron lid</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/moroccan_meatballs.jpg"
-            alt="image of moroccan meatballs"
+            src="./ASSETS/Images/lamb_shoulder.jpg"
+            alt="image of a lamb shoulder"
             height="250"
             width="350"
           />
@@ -84,14 +82,38 @@
         <div class="recipe-instructions">
           <h3>directions:</h3>
           <ol>
-            <li>combine all meatball ingredients into one bowl.</li>
-            <li>roll meatball ingredients into 2cm size balls and fry.</li>
+            <li>
+              prepare the shoulder of lamb or mutton. trim off bad bits of fat
+              around the sides of the meat, but leave a thin layer of fat (this
+              adds flavor).
+            </li>
+            <li>
+              to make the marinade, place herbs, garlic, mustard, oil, vinegar
+              or lemon juice, salt and pepper into a clean jam jar. place the
+              lid on tightly and shake the jar until the colour becomes cloudy
+              and the marinade becomes thick. lie the boned out piece of meat on
+              a chopping board and spread the marinade all over. roll it up and
+              place it in a bowl. pour the remaining marinade into the bowl.
+              cover and place into the fridge to chill for a few hours.
+            </li>
+            <li>
+              preheat the barbecue. sear the shoulder on both sides. turn the
+              barbecue to a low heat, pressing the meat down with the weight of
+              either a heavy river rock or cast iron lid. close the hood. if you
+              dont have a hood and you're using a rock for the weight, cover
+              with a bit of tinfoil or the lod of a roasting dish.
+            </li>
+            <li>
+              cook for 30-40 minutes. check with a skewer or meat thermometer
+              for clear running juic or a temp of 70*c. (barbecues run at
+              different temperatures so check it often).
+            </li>
           </ol>
         </div>
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
