--- a/sloppy_joes.html
+++ b/sloppy_joes.html
@@ -72,7 +72,7 @@
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/sloppy_joes_2.jpg"
-            alt="image of cookies"
+            alt="image of a sloppy joe burger"
             height="250"
             width="350"
           />
@@ -86,7 +86,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
