--- a/sweets.html
+++ b/sweets.html
@@ -59,7 +59,7 @@
         <div class="image-banner">
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
+              src="./ASSETS/Images/homemade_cookies_2.jpg"
               alt="image of chocolate chip cookies"
               height="200"
               width="300"
@@ -89,7 +89,7 @@
               alt="image of applecrumble"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
               height="200"
               width="300"
               alt="image of spiced cookies"
@@ -97,7 +97,7 @@
           </div>
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
+              src="./ASSETS/Images/homemade_cookies_2.jpg"
               alt="image of chocolate chip cookies"
               height="200"
               width="300"
@@ -127,7 +127,7 @@
               alt="image of applecrumble"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
               height="200"
               width="300"
               alt="image of spiced cookies"
@@ -137,7 +137,7 @@
       </figure>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
