--- a/chicken_paprikash.html
+++ b/chicken_paprikash.html
@@ -78,7 +78,7 @@
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/chicken_paprikash.jpg"
-            alt="image of cookies"
+            alt="image of a chicken paprikash dish"
             height="250"
             width="350"
           />
@@ -87,20 +87,20 @@
           <h3>directions:</h3>
           <ol>
             <li>
-              Season the chicken thighs. Heat the oil in a large saucepan over a
+              season the chicken thighs. Heat the oil in a large saucepan over a
               medium heat and fry the thighs in batches for 5-8 mins until
               browned all over. Remove from the pan and set aside. Tip in the
               onion and fry for 8-10 mins until softened and turning golden.
             </li>
             <li>
-              Stir in the peppers and cook for 3 mins, then add the garlic and
+              stir in the peppers and cook for 3 mins, then add the garlic and
               tomatoes. Cook for another 5-8 mins until the tomatoes have
               started to break down. Sprinkle in the flour, paprika and hot
               paprika, if using, and cook for 30 seconds more. Return the
               chicken thighs to the pan and mix gently to coat.
             </li>
             <li>
-              Pour in the stock, bring to the boil, then turn down the heat and
+              pour in the stock, bring to the boil, then turn down the heat and
               simmer, covered, for 15 mins. Remove the lid and simmer for
               another 15 mins until the sauce has thickened. Stir in the soured
               cream and cook for 5 mins – the sauce should be quite thick. Serve
@@ -111,7 +111,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
