--- a/lamb.html
+++ b/lamb.html
@@ -62,9 +62,9 @@
           <div class="image-slider">
             <img
               src="./ASSETS/Images/lamb_stew.jpg"
-              alt="image of a lamb stew"
               height="200"
               width="300"
+              alt="image of a lamb stew"
             />
             <img
               src="./ASSETS/Images/lamb_meatballs.jpg"
@@ -100,9 +100,9 @@
           <div class="image-slider">
             <img
               src="./ASSETS/Images/lamb_stew.jpg"
-              alt="image of a lamb stew"
               height="200"
               width="300"
+              alt="image of a lamb stew"
             />
             <img
               src="./ASSETS/Images/lamb_meatballs.jpg"
@@ -139,7 +139,7 @@
       </figure>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
