--- a/sourdough.html
+++ b/sourdough.html
@@ -65,7 +65,7 @@
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/sourdough_loaf.jpg"
-            alt="image of cookies"
+            alt="image of sourdough loaf"
             height="250"
             width="350"
           />
@@ -100,7 +100,7 @@
       </section>
     </main>
 
-    <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <footer><p class="copyright">&copy; Home Recipes</p></footer>
     <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
