list working update

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         </div>
         <div class="clearfix"></div>
       </figure>
-      <button class="btn">create a meal planner</button>
+      <a href="meal_planner.html" class="btn-link"
+        ><button class="btn">create a meal planner</button></a
+      >
     </main>
 
     <footer><p class="copyright">&copy; Home Recipes</p></footer>
