--- a/meal_planner.html
+++ b/meal_planner.html
@@ -52,6 +52,7 @@
           id="meal-planner-input"
           type="text"
           placeholder="add a day and a meal, e.g. monday: meatballs"
+          autocomplete="off"
         />
       </form>
       <button class="meal-planner-btn" onclick="addToList()">add</button>
