--- a/cookies.html
+++ b/cookies.html
@@ -42,14 +42,18 @@
       </div>
     </div>
     <main class="container">
-      <form action="" onchange="redirectToPage(this)">
-        <select name="sweets" id="sweet-treats" class="menu">
-          <option value="" disabled selected>Select a sweet treat</option>
-          <option value="./cookies.html">Cookies</option>
-          <option value="./brownies.html">Brownies</option>
-          <option value="./sweets.html">back to sweets</option>
-        </select>
-      </form>
+      <!-- inputfield section BEGINS -->
+      <div class="form-container">
+        <form action="" onchange="redirectToPage(this)">
+          <select name="sweets" id="sweet-treats" class="menu">
+            <option value="" disabled selected>Select a sweet treat</option>
+            <option value="./cookies.html">Cookies</option>
+            <option value="./brownies.html">Brownies</option>
+            <option value="./sweets.html">back to sweets</option>
+          </select>
+        </form>
+      </div>
+      <!-- inputfield section ENDS -->
       <section class="recipe">
         <div class="recipe-heading"><h1>cookie time cookies</h1></div>
         <div class="recipe-ingredients">
