--- a/meal_planner.html
+++ b/meal_planner.html
@@ -46,6 +46,7 @@
 
     <main class="container">
       <h1 class="meal-planner-heading">meal planner</h1>
+      <!-- inputfield section BEGINS -->
       <div class="meal-planner-btn-container">
         <form action="" class="meal-planner-container">
           <input
@@ -58,9 +59,11 @@
         </form>
         <button class="meal-planner-btn" onclick="addToList()">add</button>
       </div>
+      <!-- inputfield section ENDS -->
       <!-- list items that have been added -->
       <ul class="list-item" id="list-item"></ul>
       <!-- list items that have been added -->
+      <!-- image carousel BEGINS -->
       <figure>
         <div class="image-banner">
           <div class="image-slider">
@@ -71,54 +74,48 @@
               width="300"
             />
             <img
-              src="./ASSETS/Images/brownies.jpg"
+              src="./ASSETS/Images/baguette.jpeg"
               height="200"
               width="300"
-              alt="image of brownies"
+              alt="image of a baguette"
             />
             <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
+              src="./ASSETS/Images/Beef-Stroganoff.webp"
               height="200"
               width="300"
-              alt="image of a lemon loaf"
+              alt="image of a bowl of beef Beef Stroganoff"
             />
             <img
-              src="./ASSETS/Images/banana_cake.webp"
+              src="./ASSETS/Images/garlic_lime_chicken.jpg"
               height="200"
               width="300"
-              alt="image of a banana cake"
+              alt="image of garlic lime chicken dish"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/beef_burger.jpg"
               height="200"
               width="300"
-              alt="image of applecrumble"
+              alt="image of a beef burger"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
+              src="./ASSETS/Images/beef_ragu.jpg"
               height="200"
               width="300"
-              alt="image of spiced cookies"
+              alt="image of a bowl of beef ragu"
             />
           </div>
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/homemade_cookies_2.jpg"
-              alt="image of chocolate chip cookies"
+              src="./ASSETS/Images/beef_meatballs.jpg"
+              alt="image of a bowl of meatballs"
               height="200"
               width="300"
             />
             <img
-              src="./ASSETS/Images/brownies.jpg"
+              src="./ASSETS/Images/chicken_soup.jpg"
               height="200"
               width="300"
-              alt="image of brownies"
-            />
-            <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
-              height="200"
-              width="300"
-              alt="image of a lemon loaf"
+              alt="image of a bowl of chicken soup"
             />
             <img
               src="./ASSETS/Images/banana_cake.webp"
@@ -127,20 +124,27 @@
               alt="image of a banana cake"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/chicken_paprikash.jpg"
               height="200"
               width="300"
-              alt="image of applecrumble"
+              alt="image of chicken paprikash dish"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
+              src="./ASSETS/Images/buns.jpg"
               height="200"
               width="300"
-              alt="image of spiced cookies"
+              alt="image of bread buns"
+            />
+            <img
+              src="./ASSETS/Images/lamb_kebabs.jpg"
+              height="200"
+              width="300"
+              alt="image of lamb kebabs"
             />
           </div>
         </div>
       </figure>
+      <!-- image carousel ENDS -->
     </main>
 
     <footer><p class="copyright">&copy; Home Recipes</p></footer>
