--- a/moroccan_meatballs.html
+++ b/moroccan_meatballs.html
@@ -42,9 +42,10 @@
       </div>
     </div>
     <main class="container">
+      <!-- inputfield section BEGINS -->
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
-          <select name="sweets" id="menu" class="menu">
+          <select name="beef" id="menu" class="menu">
             <option value="" disabled selected>Select a lamb dish</option>
             <option value="./moroccan_meatballs.html">
               moroccan meatballs
@@ -54,6 +55,7 @@
           </select>
         </form>
       </div>
+      <!-- inputfield section ENDS -->
       <section class="recipe">
         <div class="recipe-heading"><h1>moroccan meatballs</h1></div>
         <div class="recipe-ingredients">
