--- a/lamb.html
+++ b/lamb.html
@@ -45,6 +45,7 @@
     </nav>
     <main class="container">
       <h1 class="form-instructions">please select from the drop down menu</h1>
+      <!-- inputfield section BEGINS -->
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
@@ -57,6 +58,8 @@
           </select>
         </form>
       </div>
+      <!-- inputfield section ENDS -->
+      <!-- image carousel BEGINS -->
       <figure>
         <div class="image-banner">
           <div class="image-slider">
@@ -137,6 +140,7 @@
           </div>
         </div>
       </figure>
+      <!-- image carousel ENDS -->
     </main>
 
     <footer><p class="copyright">&copy; Home Recipes</p></footer>
