--- a/lamb_shoulder.html
+++ b/lamb_shoulder.html
@@ -42,6 +42,7 @@
       </div>
     </div>
     <main class="container">
+      <!-- inputfield section BEGINS -->
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
@@ -54,6 +55,7 @@
           </select>
         </form>
       </div>
+      <!-- inputfield section ENDS -->
       <section class="recipe">
         <div class="recipe-heading"><h1>lamb shoulder</h1></div>
         <div class="recipe-ingredients">
