--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main class="container">
-      <figure>
+      <figure class="images-container">
         <div class="col-4">
           <img
             class="sourdough-img"
