--- a/beef.html
+++ b/beef.html
@@ -115,25 +115,25 @@
               src="./ASSETS/Images/sticky_beef.webp"
               height="200"
               width="300"
-              alt="image of sticky_beef rice"
+              alt="image of sticky beef rice"
             />
             <img
-              src="./ASSETS/Images/beef_burger.jpg"
+              src="./ASSETS/Images/beef burger.jpg"
               height="200"
               width="300"
               alt="image of beef_burger"
             />
             <img
-              src="./ASSETS/Images/beef_meatballs.jpg"
+              src="./ASSETS/Images/beef meatballs.jpg"
               height="200"
               width="300"
               alt="image of meatballs on pasta"
             />
             <img
-              src="./ASSETS/Images/beef_ragu.jpg"
+              src="./ASSETS/Images/beef ragu.jpg"
               height="200"
               width="300"
-              alt="image of beef_ragu dish"
+              alt="image of beef ragu dish"
             />
           </div>
         </div>
