--- a/chicken_paprikash.html
+++ b/chicken_paprikash.html
@@ -89,23 +89,23 @@
           <h3>directions:</h3>
           <ol>
             <li>
-              season the chicken thighs. Heat the oil in a large saucepan over a
+              season the chicken thighs. heat the oil in a large saucepan over a
               medium heat and fry the thighs in batches for 5-8 mins until
-              browned all over. Remove from the pan and set aside. Tip in the
+              browned all over. remove from the pan and set aside. tip in the
               onion and fry for 8-10 mins until softened and turning golden.
             </li>
             <li>
               stir in the peppers and cook for 3 mins, then add the garlic and
-              tomatoes. Cook for another 5-8 mins until the tomatoes have
-              started to break down. Sprinkle in the flour, paprika and hot
-              paprika, if using, and cook for 30 seconds more. Return the
+              tomatoes. cook for another 5-8 mins until the tomatoes have
+              started to break down. sprinkle in the flour, paprika and hot
+              paprika, if using, and cook for 30 seconds more. return the
               chicken thighs to the pan and mix gently to coat.
             </li>
             <li>
               pour in the stock, bring to the boil, then turn down the heat and
-              simmer, covered, for 15 mins. Remove the lid and simmer for
-              another 15 mins until the sauce has thickened. Stir in the soured
-              cream and cook for 5 mins – the sauce should be quite thick. Serve
+              simmer, covered, for 15 mins. remove the lid and simmer for
+              another 15 mins until the sauce has thickened. stir in the soured
+              cream and cook for 5 mins – the sauce should be quite thick. serve
               with boiled potatoes, noodles or rice.
             </li>
           </ol>
