--- a/garlic_lime_chicken.html
+++ b/garlic_lime_chicken.html
@@ -88,13 +88,13 @@
             <li>
               mix together salt, black pepper, cayenne, 1/4 teaspoon garlic
               powder, thyme, parsley, paprika, and onion powder in a small bowl.
-              Sprinkle spice mixture generously on both sides of chicken
+              sprinkle spice mixture generously on both sides of chicken
               breasts.
             </li>
             <li>
               heat butter and olive oil in a large heavy skillet over medium
-              heat. Sauté chicken until golden brown, about 6 minutes on each
-              side. Sprinkle with remaining 2 teaspoons garlic powder and lime
+              heat. sauté chicken until golden brown, about 6 minutes on each
+              side. sprinkle with remaining 2 teaspoons garlic powder and lime
               juice. Cook 5 minutes more, stirring frequently to coat evenly
               with cooking juices.
             </li>
