--- a/index.html
+++ b/index.html
@@ -55,21 +55,23 @@
             width="350"
           />
 
-          <img
-            class="cookies-img"
-            src="./ASSETS/Images/choc_chip_cookies.webp"
-            alt="image of chocolate chip cookies"
-            height="300"
-            width="350"
-          />
+          <a href="./cookies.html">
+            <img
+              class="cookies-img"
+              src="./ASSETS/Images/choc_chip_cookies.webp"
+              alt="image of chocolate chip cookies"
+              height="300"
+              width="350"
+          /></a>
 
-          <img
-            class="moroccan-meatballs-img"
-            src="./ASSETS/Images/moroccan_meatballs.jpg"
-            alt="image of moroccan meatballs"
-            height="300"
-            width="350"
-          />
+          <a href="./moroccan_meatballs.html"
+            ><img
+              class="moroccan-meatballs-img"
+              src="./ASSETS/Images/moroccan_meatballs.jpg"
+              alt="image of moroccan meatballs"
+              height="300"
+              width="350"
+          /></a>
         </div>
 
         <div class="col-4">
@@ -111,13 +113,14 @@
             height="200"
             width="350"
           />
-          <img
-            class="Beef-Stroganoff-img"
-            src="./ASSETS/Images/Beef-Stroganoff.webp"
-            alt="image of a bowl of beef Beef-Stroganoff noodles"
-            height="250"
-            width="350"
-          />
+          <a href="./beef_stroganoff.html"
+            ><img
+              class="Beef-Stroganoff-img"
+              src="./ASSETS/Images/Beef-Stroganoff.webp"
+              alt="image of a bowl of beef Beef-Stroganoff noodles"
+              height="250"
+              width="350"
+          /></a>
         </div>
 
         <div class="col-4">
