--- a/moroccan_meatballs.html
+++ b/moroccan_meatballs.html
@@ -45,7 +45,7 @@
       <!-- inputfield section BEGINS -->
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
-          <select name="beef" id="menu" class="menu">
+          <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a lamb dish</option>
             <option value="./moroccan_meatballs.html">
               moroccan meatballs
