--- a/spiced_cookies.html
+++ b/spiced_cookies.html
@@ -55,27 +55,21 @@
       </div>
       <!-- inputfield section ENDS -->
       <section class="recipe">
-        <div class="recipe-heading"><h1>cookie time cookies</h1></div>
+        <div class="recipe-heading"><h1>spiced cookies</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>225g of butter</li>
-            <li>200g brown sugar</li>
-            <li>100g castor sugar</li>
-            <li>2 eggs</li>
-            <li>180g flour</li>
-            <li>180g self-raising</li>
-            <li>1 teaspoon cornflour</li>
-            <li>1/2 teaspoon of salt</li>
-            <li>1 teaspoon baking soda</li>
-            <li>350g chocolate (best is whitakers)</li>
-          </ul>
-          <ul class="recipe-gap">
-            <li>makes 10-12</li>
+            <li>75g (30z) butter</li>
+            <li>1 small egg</li>
+            <li>275g (10oz) plain flour</li>
+            <li>50g (2oz) golden syrup</li>
+            <li>1 level teaspoon baking powder</li>
+            <li>100g (4oz) soft brown sugar</li>
+            <li>1 desertspoon cinnamon</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/homemade_cookies_1.jpg"
+            src="./ASSETS/Images/spiced_cookies.jpg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -86,17 +80,29 @@
 
           <ol>
             <li>
-              with a stand mixer, mix butter and sugar for at least 5 minutes.
+              set the oven at 170*c. sift flour, baking powder and cinnamon into
+              a mixing bowl. stir in sugar.
             </li>
             <li>
-              add eggs one at a time. then add all of the other ingredients
+              add the butter and cup it up. rub the flour and butter together
+              with your fingertips until the mixture looks like breadcrumbs.
             </li>
-            <li>add the chocolate last.</li>
             <li>
-              spoon the mixture into large mounds. then freeze for at least 30
-              minutes.
+              break the egg into a jug and beat it with a fork. add the golden
+              syrup and mix it with the egg until smooth.
             </li>
-            <li>bake at 180*c-200*c for 10-14 minutes</li>
+            <li>
+              make a hollow in the flour and pour in the egg mixture. mix
+              everything together well until you have a big ball of dough.
+            </li>
+            <li>
+              put the ball of dough into a plastic bag. place it in the fridge
+              for 30 minutes, which will make it easier to roll out.
+            </li>
+            <li>
+              sprinkle some flour not the table and your rolling pin. roll out
+              the dough evenly until it is about 0.5cm(1/4 in) thick.
+            </li>
           </ol>
         </div>
       </section>
