--- a/sweets.html
+++ b/sweets.html
@@ -51,7 +51,7 @@
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a sweet treat</option>
             <option value="./cookies.html">cookies</option>
-            <option value="./brownies.html">brownies</option>
+            <option value="./spiced_cookies.html">spiced cookies</option>
             <option value="./sweets.html">back to sweets</option>
           </select>
         </form>
